kuber/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend
spec:
  selector:
    matchLabels:
      app: simple-node-backend
      tier: backend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: simple-node-backend
        tier: backend
        track: stable
    spec:
      containers:
        - image: danielnaumau/node-backend:test
          name: simple-node-backend
          ports:
            - containerPort: 8080
              protocol: TCP
