kuber/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-frontend
spec:
  selector:
    matchLabels:
      app: test-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: test-frontend
    spec:
      containers:
        - name: test-frontend
          image: danielnaumau/test-frontend:latest
          ports:
            - containerPort: 3000
