kuber/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-backend
spec:
  selector:
    app: node-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
