kuber/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-frontend
spec:
  type: NodePort
  selector:
    app: test-frontend
  ports:
    - port: 3000
      name: http
