kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-task-ingress
spec:
  rules:
    - host: testtraveltime.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: node-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-frontend
                port:
                  number: 3000
